@@ -10,19 +10,18 @@ jQuery(document).ready(function(){
 						term: request.term.toLowerCase()
 					},
 					success: function(data) {
-						var rs = new Array();
-						var output = new Array();
+						var rs     = [],
+							output = [];
 
-						i = 0;
-						for (var term in data) {
+						jQuery.each(data, function(term, termIndex) {
 							var unformatted_label = term + ' <span class="result_count">(' + data[term] + ')</span>';
-							output[i++] = {
-								label	: unformatted_label.replace(new RegExp('(?![^&;]+;)(?!<[^<>]*)(' +
-											jQuery.ui.autocomplete.escapeRegex(request.term) +
-											')(?![^<>]*>)(?![^&;]+;)', 'gi'), '<strong>$1</strong>'),
-								value  : term
-							};
-						}
+							output.push({
+								label : unformatted_label.replace(new RegExp('(?![^&;]+;)(?!<[^<>]*)(' +
+									jQuery.ui.autocomplete.escapeRegex(request.term) +
+									')(?![^<>]*>)(?![^&;]+;)', 'gi'), '<strong>$1</strong>'),
+								value : term
+							});
+						});
 
 						response(output);
 					}
